--- a/QTModules/Annotation/Resources/UI/qSlicerAnnotationModulePropertyDialog.ui
+++ b/QTModules/Annotation/Resources/UI/qSlicerAnnotationModulePropertyDialog.ui
@@ -93,12 +93,15 @@
         </widget>
        </item>
        <item row="4" column="1">
-        <widget class="QLineEdit" name="lineEdit">
+        <widget class="QLineEdit" name="measurementLineEdit">
          <property name="sizePolicy">
           <sizepolicy hsizetype="MinimumExpanding" vsizetype="Fixed">
            <horstretch>0</horstretch>
            <verstretch>0</verstretch>
           </sizepolicy>
+         </property>
+         <property name="readOnly">
+          <bool>true</bool>
          </property>
         </widget>
        </item>
