ENH: Add system icon to SlicerQT application.
git-svn-id: http://svn.slicer.org/Slicer3/trunk@14748 3bd1e089-480b-0410-8dfb-8563597acbee

--- a/Applications/SlicerQT/Resources/SlicerQT.qrc
+++ b/Applications/SlicerQT/Resources/SlicerQT.qrc
@@ -1,5 +1,9 @@
 <!DOCTYPE RCC><RCC version="1.0">
   <qresource>
+    <file>Icons/Small/3DSlicer-DesktopIcon.gif</file>
+    <file>Icons/Medium/3DSlicer-DesktopIcon.gif</file>
+    <file>Icons/Large/3DSlicer-DesktopIcon.gif</file>
+    <file>Icons/XLarge/3DSlicer-DesktopIcon.gif</file>
     <file>Images/SlicerSplashScreen.png</file>
   </qresource>
 </RCC>
