BUG: Restore drag&drop in the Data module
git-svn-id: http://svn.slicer.org/Slicer3/trunk@14756 3bd1e089-480b-0410-8dfb-8563597acbee

--- a/Base/QTCoreModules/Resources/UI/qSlicerDataModule.ui
+++ b/Base/QTCoreModules/Resources/UI/qSlicerDataModule.ui
@@ -35,6 +35,9 @@
           <verstretch>0</verstretch>
          </sizepolicy>
         </property>
+        <property name="dragDropMode">
+         <enum>QAbstractItemView::InternalMove</enum>
+        </property>
         <property name="indentation">
          <number>10</number>
         </property>
