--- a/Libs/qMRMLWidgets/Resources/qMRMLWidgets.qrc
+++ b/Libs/qMRMLWidgets/Resources/qMRMLWidgets.qrc
@@ -63,5 +63,62 @@
     <file>Icons/ViewZoomIn.png</file>
     <file>Icons/ViewZoomOut.png</file>
 
+    <file alias="AbdomenColors">Icons/LUTs/AbdomenColors.png</file>
+    <file alias="blankLUT">Icons/LUTs/blankLUT.png</file>
+    <file alias="dGEMRIC-3T">Icons/LUTs/cartilegeMIdGEMRIC-3T.png</file>
+    <file alias="dGEMRIC-1.5T">Icons/LUTs/cartilegeMRIdGEMRIC-1.5T.png</file>
+    <file alias="Blue">Icons/LUTs/discreteBlue.png</file>
+    <file alias="Cool1">Icons/LUTs/discreteCool1.png</file>
+    <file alias="Cool2">Icons/LUTs/discreteCool2.png</file>
+    <file alias="Cool3">Icons/LUTs/discreteCool3.png</file>
+    <file alias="Cyan">Icons/LUTs/discreteCyan.png</file>
+    <file alias="Desert">Icons/LUTs/discreteDesert.png</file>
+    <file alias="fMRI">Icons/LUTs/discretefMRI.png</file>
+    <file alias="fMRIPA">Icons/LUTs/discretefMRIPA.png</file>
+    <file alias="FullRainbow">Icons/LUTs/discreteFullRainbow.png</file>
+    <file alias="Green">Icons/LUTs/discreteGreen.png</file>
+    <file alias="Grey">Icons/LUTs/discreteGrey.png</file>
+    <file alias="InvertedGrey">Icons/LUTs/discreteInvertedGrey.png</file>
+    <file alias="Iron">Icons/LUTs/discreteIron.png</file>
+    <file alias="Labels">Icons/LUTs/discreteLabels.png</file>
+    <file alias="Magenta">Icons/LUTs/discreteMagenta.png</file>
+    <file alias="Ocean">Icons/LUTs/discreteOcean.png</file>
+    <file alias="Rainbow">Icons/LUTs/discreteRainbow.png</file>
+    <file alias="Random">Icons/LUTs/discreteRandom.png</file>
+    <file alias="RandomIntegers">Icons/LUTs/discreteRandomIntegers.png</file>
+    <file alias="Red">Icons/LUTs/discreteRed.png</file>
+    <file alias="ReverseRainbow">Icons/LUTs/discreteReverseRainbow.png</file>
+    <file alias="Warm1">Icons/LUTs/discreteWarm1.png</file>
+    <file alias="Warm2">Icons/LUTs/discreteWarm2.png</file>
+    <file alias="Warm3">Icons/LUTs/discreteWarm3.png</file>
+    <file alias="Yellow">Icons/LUTs/discreteYellow.png</file>
+    <file alias="BlueRed">Icons/LUTs/freeSurferBlueRed.png</file>
+    <file alias="GreenRed">Icons/LUTs/freeSurferGreenRed.png</file>
+    <file alias="Heat">Icons/LUTs/freeSurferHeat.png</file>
+    <file alias="RedBlue">Icons/LUTs/freeSurferRedBlue.png</file>
+    <file alias="RedGreen">Icons/LUTs/freeSurferRedGreen.png</file>
+    <file alias="GenericAnatomyColors">Icons/LUTs/genericAnatomyColors.png</file>
+    <file alias="GenericColors">Icons/LUTs/genericColors.png</file>
+    <file alias="UserDefined">Icons/LUTs/labelsCustom.png</file>
+    <file alias="64Color-Nonsemantic">Icons/LUTs/labelsNonSemantic.png</file>
+    <file alias="PelvisColor">Icons/LUTs/labelsPelvisColor.png</file>
+    <file alias="PET-Heat">Icons/LUTs/petPETHeat.png</file>
+    <file alias="PET-MaximumIntensityProjection">Icons/LUTs/petPETMIP.png</file>
+    <file alias="PET-Rainbow">Icons/LUTs/petPETRainbow.png</file>
+    <file alias="CoolShade1">Icons/LUTs/shadeCoolShade1.png</file>
+    <file alias="CoolShade2">Icons/LUTs/shadeCoolShade2.png</file>
+    <file alias="CoolShade3">Icons/LUTs/shadeCoolShade3.png</file>
+    <file alias="WarmShade1">Icons/LUTs/shadeWarmShade1.png</file>
+    <file alias="WarmShade2">Icons/LUTs/shadeWarmShade2.png</file>
+    <file alias="WarmShade3">Icons/LUTs/shadeWarmShade3.png</file>
+    <file alias="Slicer3_2010_Brain_Labels">Icons/LUTs/slicerBrainLUT2010.png</file>
+    <file alias="Slicer3_2010_Label_Colors">Icons/LUTs/slicerShortLUT.png</file>
+    <file alias="SPL-BrainAtlas-ColorFile">Icons/LUTs/SPL-BrainAtlas-ColorFile.png</file>
+    <file alias="CoolTint1">Icons/LUTs/tintCoolTint1.png</file>
+    <file alias="CoolTint2">Icons/LUTs/tintCoolTint2.png</file>
+    <file alias="CoolTint3">Icons/LUTs/tintCoolTint3.png</file>
+    <file alias="WarmTint1">Icons/LUTs/tintWarmTint1.png</file>
+    <file alias="WarmTint2">Icons/LUTs/tintWarmTint2.png</file>
+    <file alias="WarmTint3">Icons/LUTs/tintWarmTint3.png</file>
   </qresource>
 </RCC>
