--- a/QTModules/Volumes/Resources/qSlicerVolumesModule.qrc
+++ b/QTModules/Volumes/Resources/qSlicerVolumesModule.qrc
@@ -2,5 +2,8 @@
   <qresource>
     <file>Icons/Volumes.png</file>
     <file>Icons/LoadVolume.png</file>
+    <file>Icons/WindowLevelPreset-CT-air.png</file>
+    <file>Icons/WindowLevelPreset-CT-bone.png</file>
+    <file>Icons/WindowLevelPreset-PET.png</file>
   </qresource>
 </RCC>
