ENH: EMSegment - Associate segment step with an icon
git-svn-id: http://svn.slicer.org/Slicer3/trunk@14774 3bd1e089-480b-0410-8dfb-8563597acbee

--- a/Base/QTGUI/Resources/qSlicerBaseQTGUI.qrc
+++ b/Base/QTGUI/Resources/qSlicerBaseQTGUI.qrc
@@ -57,6 +57,8 @@
 
     <file>Icons/CheckModified.png</file>
     <file>Icons/CheckModifiedData.png</file>
+    
+    <file>Icons/Go.png</file>
 
     <file>Icons/MousePickMode.png</file>
     <file>Icons/MouseSinglePickMode.png</file>
