--- a/Libs/qMRMLWidgets/Resources/UI/qMRMLSliceControllerWidget.ui
+++ b/Libs/qMRMLWidgets/Resources/UI/qMRMLSliceControllerWidget.ui
@@ -406,7 +406,7 @@ Use this display to cross-reference to filmed images or other displays.</string>
      <normaloff>:/Icons/SlicerRotateToPixelSpace.png</normaloff>:/Icons/SlicerRotateToPixelSpace.png</iconset>
    </property>
    <property name="text">
-    <string>Rotate to volume vlane</string>
+    <string>Rotate to volume plane</string>
    </property>
    <property name="toolTip">
     <string>Rotate to volume plane</string>
@@ -670,7 +670,7 @@ Use this display to cross-reference to filmed images or other displays.</string>
   </connection>
   <connection>
    <sender>actionFit_to_window</sender>
-   <signal>triggered()</signal>
+   <signal>activated()</signal>
    <receiver>qMRMLSliceControllerWidget</receiver>
    <slot>fitSliceToBackground()</slot>
    <hints>
@@ -686,7 +686,7 @@ Use this display to cross-reference to filmed images or other displays.</string>
   </connection>
   <connection>
    <sender>actionRotate_to_volume_plane</sender>
-   <signal>triggered()</signal>
+   <signal>activated()</signal>
    <receiver>qMRMLSliceControllerWidget</receiver>
    <slot>rotateSliceToBackground()</slot>
    <hints>
