ENH: qMRMLThreeDViewsControllerWidget - Implement setAxisVisibility/setAxisLabelVisibility buttons
git-svn-id: http://svn.slicer.org/Slicer3/trunk@14863 3bd1e089-480b-0410-8dfb-8563597acbee

--- a/Libs/qMRMLWidgets/Resources/UI/qMRMLThreeDViewsControllerWidget.ui
+++ b/Libs/qMRMLWidgets/Resources/UI/qMRMLThreeDViewsControllerWidget.ui
@@ -327,6 +327,28 @@
     <string>Switch to Interlaced stereo mode</string>
    </property>
   </action>
+  <action name="actionSet3DAxisVisible">
+   <property name="checkable">
+    <bool>true</bool>
+   </property>
+   <property name="checked">
+    <bool>true</bool>
+   </property>
+   <property name="text">
+    <string>3D cube</string>
+   </property>
+  </action>
+  <action name="actionSet3DAxisLabelVisible">
+   <property name="checkable">
+    <bool>true</bool>
+   </property>
+   <property name="checked">
+    <bool>true</bool>
+   </property>
+   <property name="text">
+    <string>3D axis label</string>
+   </property>
+  </action>
  </widget>
  <customwidgets>
   <customwidget>
