ENH: qMRMLThreeDViewsControllerWidget - Implement background buttons
git-svn-id: http://svn.slicer.org/Slicer3/trunk@14864 3bd1e089-480b-0410-8dfb-8563597acbee

--- a/Libs/qMRMLWidgets/Resources/UI/qMRMLThreeDViewsControllerWidget.ui
+++ b/Libs/qMRMLWidgets/Resources/UI/qMRMLThreeDViewsControllerWidget.ui
@@ -349,6 +349,42 @@
     <string>3D axis label</string>
    </property>
   </action>
+  <action name="actionSetLightBlueBackground">
+   <property name="checkable">
+    <bool>true</bool>
+   </property>
+   <property name="checked">
+    <bool>true</bool>
+   </property>
+   <property name="text">
+    <string>Light blue background</string>
+   </property>
+   <property name="toolTip">
+    <string>Set light blue background</string>
+   </property>
+  </action>
+  <action name="actionSetBlackBackground">
+   <property name="checkable">
+    <bool>true</bool>
+   </property>
+   <property name="text">
+    <string>Black background</string>
+   </property>
+   <property name="toolTip">
+    <string>Set black background</string>
+   </property>
+  </action>
+  <action name="actionSetWhiteBackground">
+   <property name="checkable">
+    <bool>true</bool>
+   </property>
+   <property name="text">
+    <string>White background</string>
+   </property>
+   <property name="toolTip">
+    <string>Set white background</string>
+   </property>
+  </action>
  </widget>
  <customwidgets>
   <customwidget>
