ENH: qMRMLThreeDViewControllerWidget - Add background image to view control frame
git-svn-id: http://svn.slicer.org/Slicer3/trunk@14867 3bd1e089-480b-0410-8dfb-8563597acbee

--- a/Libs/qMRMLWidgets/Resources/qMRMLWidgets.qrc
+++ b/Libs/qMRMLWidgets/Resources/qMRMLWidgets.qrc
@@ -47,6 +47,7 @@
     <file>Icons/SliceWidgetOff.png</file>
     <file>Icons/SliceWidgetOn.png</file>
 
+    <file>Icons/ViewAxis.png</file>
     <file>Icons/ViewCamera.png</file>
     <file>Icons/ViewCameraSelect.png</file>
     <file>Icons/ViewCapture.png</file>
