--- a/Applications/SlicerQT/Resources/UI/qSlicerMainWindow.ui
+++ b/Applications/SlicerQT/Resources/UI/qSlicerMainWindow.ui
@@ -11,7 +11,7 @@
    </rect>
   </property>
   <property name="windowTitle">
-   <string>SlicerQT</string>
+   <string>3D Slicer</string>
   </property>
   <property name="windowIcon">
    <iconset resource="../SlicerQT.qrc">
