--- a/Base/QTGUI/Resources/UI/qSlicerModulePanel.ui
+++ b/Base/QTGUI/Resources/UI/qSlicerModulePanel.ui
@@ -19,6 +19,9 @@
    </property>
    <item row="0" column="0">
     <widget class="QScrollArea" name="ScrollArea">
+     <property name="frameShape">
+      <enum>QFrame::NoFrame</enum>
+     </property>
      <property name="horizontalScrollBarPolicy">
       <enum>Qt::ScrollBarAlwaysOff</enum>
      </property>
@@ -30,11 +33,14 @@
        <rect>
         <x>0</x>
         <y>0</y>
-        <width>353</width>
-        <height>157</height>
+        <width>357</width>
+        <height>161</height>
        </rect>
       </property>
       <layout class="QVBoxLayout" name="verticalLayout_4">
+       <property name="margin">
+        <number>0</number>
+       </property>
        <item>
         <widget class="ctkCollapsibleButton" name="HelpCollapsibleButton">
          <property name="sizePolicy">
