--- a/Libs/qMRMLWidgets/Resources/UI/qMRMLThreeDViewsControllerWidget.ui
+++ b/Libs/qMRMLWidgets/Resources/UI/qMRMLThreeDViewsControllerWidget.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>441</width>
-    <height>122</height>
+    <width>268</width>
+    <height>110</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -289,26 +289,17 @@
     </layout>
    </item>
    <item>
-    <widget class="QFrame" name="frame_2">
-     <property name="sizePolicy">
-      <sizepolicy hsizetype="Fixed" vsizetype="Fixed">
-       <horstretch>0</horstretch>
-       <verstretch>0</verstretch>
-      </sizepolicy>
+    <spacer name="horizontalSpacer">
+     <property name="orientation">
+      <enum>Qt::Horizontal</enum>
      </property>
-     <property name="minimumSize">
+     <property name="sizeHint" stdset="0">
       <size>
-       <width>150</width>
-       <height>80</height>
+       <width>10</width>
+       <height>20</height>
       </size>
      </property>
-     <property name="frameShape">
-      <enum>QFrame::Box</enum>
-     </property>
-     <property name="frameShadow">
-      <enum>QFrame::Raised</enum>
-     </property>
-    </widget>
+    </spacer>
    </item>
   </layout>
   <action name="actionNoStereo">
